main/kubernetes/kube-compose-deploy-echo-2.yaml
#########################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
#      SPDX-License-Identifier:  GPL-2.0-only                           #
#########################################################################
# docker service create --detach --entrypoint php --name phpinfo --publish 8080 --user nobody:nogroup --volume ${PWD}/src/index.php:/src/index.php:ro --workdir /src/ docker.io/library/php:alpine -f index.php -S 0.0.0.0:8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpinfo-deploy-echo-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phpinfo-deploy-echo-2
  template:
  # HERE COMES THE MANIFEST OF THE POD
    metadata:
      # BUT WE REMOVE THE ORIGINAL NAME OF THE POD
      #name: phpinfo-rc-echo
      labels:
        app: phpinfo-deploy-echo-2
    spec:
      containers:
        - name: phpinfo-container
          args:
            - -f
            - index.php
            - -S
            - 0.0.0.0:8080
          command:
            - php
          image: docker.io/library/php:alpine
          volumeMounts:
            - name: phpinfo-volume
              mountPath: /src/
              readOnly: true
          workingDir: /src/
      volumes:
        - name: phpinfo-volume
          emptyDir:
            medium: Memory
            sizeLimit: 2Mi
