main/kubernetes/kube-static-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phpinfo-po-echo-static
  labels:
    app: phpinfo-po-echo-static
spec:
  containers:
    - name: phpinfo-container
      args:
        - -f
        - index.php
        - -S
        - 0.0.0.0:8080
      command:
        - php
      image: docker.io/library/php:alpine
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: phpinfo-volume
          mountPath: /src/
          readOnly: true
      workingDir: /src/
  volumes:
    - name: phpinfo-volume
      emptyDir:
        medium: Memory
        sizeLimit: 1Mi
