main/kubernetes/kube-compose-po-secret.yaml
#########################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
#      SPDX-License-Identifier:  GPL-2.0-only                           #
#########################################################################
# docker run --detach --entrypoint php --name phpinfo --publish 8080 --user nobody:nobody --volume ${PWD}/src/index.php:/src/index.php:ro --workdir /src/ docker.io/library/php:alpine -f index.php -S 0.0.0.0:8080
---
apiVersion: v1
kind: Pod
metadata:
  name: phpinfo-po-secret
  labels:
    app: phpinfo-po-secret
spec:
  containers:
    - name: phpinfo-container
      args:
        - -f
        - index.php
        - -S
        - 0.0.0.0:8080
      command:
        - php
      image: docker.io/library/php:alpine
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: phpinfo-volume
          mountPath: /src/index.php
          readOnly: true
          subPath: index.php
      workingDir: /src/
  volumes:
    - name: phpinfo-volume
      secret:
        defaultMode: 0444
        items: 
          - key: index.php
            mode: 0444
            path: index.php
        secretName: phpinfo-secret
---
apiVersion: v1
kind: Service
metadata:
  name: phpinfo-po-secret
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: phpinfo-po-secret
  type: NodePort
---
